Prepare Hugo site for Netlify deployment

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,14 @@
-theme = 'beautifulhugo'
+baseURL = "https://SEU-SITE.netlify.app/"
+languageCode = "pt-br"
+title = "Grupo Kwanza"
+
+theme = "beautifulhugo"
+
+paginate = 10
+enableRobotsTXT = true
+
+canonifyURLs = true
+relativeURLs = false
 
 [menu]
 
