Update URL Netlify

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://SEU-SITE.netlify.app/"
+baseURL = "https://tranquil-puffpuff-e6e7a3.netlify.app/"
 languageCode = "pt-br"
 title = "Grupo Kwanza"
 
