Inclusao da tabela de mestres associados e texto de valore

--- a/hugo.toml
+++ b/hugo.toml
@@ -48,3 +48,8 @@ relativeURLs = false
     name = "Contatos"
     url = "/contatos/"
     weight = 6
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
