Inclusao da pagina Contatos e o bloco dos próximos eventos

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,7 +21,7 @@ relativeURLs = false
 
   [[menu.main]]
     identifier = "equipe"
-    name = "Equipe Kwanza"
+    name = "Identidade Kwanza"
     url = "/equipe-kwanza/"
     weight = 2
 
