chore: harden security, optimize assets, improve cantigas UX, add tests and docs

--- a/hugo.toml
+++ b/hugo.toml
@@ -176,4 +176,4 @@ theme = "beautifulhugo"
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
-      unsafe = true
+      unsafe = false
