--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "test": "node --test *.test.js"
+    "test": "node --test tests/unit/js/*.test.js"
   }
 }
